crates/vize_atelier_sfc/src/compile_script/snapshots/vize_atelier_sfc__compile_script__tests__compile_script_tests__transform_typescript_to_js_strips_types.snap
---
source: crates/vize_atelier_sfc/src/compile_script/tests.rs
expression: result.as_str()
---
const getNumber = (x) => {
  return x.toString();
};
const foo = "bar";
