crates/vize_atelier_sfc/src/compile_script/snapshots/vize_atelier_sfc__compile_script__tests__compile_script_tests__type_comparison_not_stripped.snap
---
source: crates/vize_atelier_sfc/src/compile_script/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from "vue";
const __sfc__ = /* @__PURE__ */ _defineComponent({
  __name: "Test",
  props: ["type"],
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const props = __props;
    const isButton = props.type === "button";
    const __returned__ = {
      isButton,
      props,
      type
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});
